[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/style_panel_card.tres" type="StyleBox" id=1]
[ext_resource path="res://scenes/title_container.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/card.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/font_regular_detail.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/icons/description.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/checklist.svg" type="Texture" id=6]

[node name="Card" type="MarginContainer"]
rect_min_size = Vector2( 240, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 2
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardContent" type="PanelContainer" parent="."]
margin_left = 2.0
margin_top = 5.0
margin_right = 242.0
margin_bottom = 71.0
rect_min_size = Vector2( 240, 40 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="InnerPadding" type="MarginContainer" parent="CardContent"]
margin_right = 240.0
margin_bottom = 66.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CardContent/InnerPadding"]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 58.0
custom_constants/separation = 5

[node name="TitleContainer" parent="CardContent/InnerPadding/VBoxContainer" instance=ExtResource( 2 )]

[node name="Split" parent="CardContent/InnerPadding/VBoxContainer/TitleContainer" index="1"]
margin_bottom = 22.0

[node name="IndicatorsContainer" type="HBoxContainer" parent="CardContent/InnerPadding/VBoxContainer"]
margin_top = 27.0
margin_right = 224.0
margin_bottom = 50.0

[node name="DescriptionIcon" type="TextureRect" parent="CardContent/InnerPadding/VBoxContainer/IndicatorsContainer"]
margin_right = 14.0
margin_bottom = 23.0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
flip_v = true

[node name="DescriptionSep" type="HSeparator" parent="CardContent/InnerPadding/VBoxContainer/IndicatorsContainer"]
margin_left = 18.0
margin_right = 26.0
margin_bottom = 23.0
rect_min_size = Vector2( 8, 0 )

[node name="ChecklistIcon" type="TextureRect" parent="CardContent/InnerPadding/VBoxContainer/IndicatorsContainer"]
margin_left = 30.0
margin_right = 44.0
margin_bottom = 23.0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ChecklistCountLabel" type="Label" parent="CardContent/InnerPadding/VBoxContainer/IndicatorsContainer"]
margin_left = 48.0
margin_right = 75.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 14 )
custom_colors/font_color = Color( 0.368627, 0.423529, 0.517647, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0/1"

[node name="SizePlaceholder" type="HSeparator" parent="CardContent/InnerPadding/VBoxContainer/IndicatorsContainer"]
margin_left = 79.0
margin_right = 87.0
margin_bottom = 23.0
rect_min_size = Vector2( 8, 23 )

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]

[editable path="CardContent/InnerPadding/VBoxContainer/TitleContainer"]
